zdej bi rabl to bit to

--- a/06-uvod-v-latex/urnik/urnik.tex
+++ b/06-uvod-v-latex/urnik/urnik.tex
@@ -1,7 +1,7 @@
 \documentclass{article}
 \usepackage[utf8]{inputenc}
 \usepackage[T1]{fontenc}   
-\usepackage[slovene]{babel}
+\usepackage[slovenian]{babel}
 
 \title{Izdelava urnikov}
 \author{Nejc Širovnik}
@@ -124,7 +124,7 @@ katere podatke naj vsebujejo.
 Kar pri treh razredih je kot podatek navedena tabela zasedenosti, zato si jo podrobneje
 oglejmo. Vsako tabelo določata njena velikost ter tip vrednosti. Naslednji izračun nam
 poda velikost tabele:
-\[\text{velikostTabele} = \text{številoUrNaDan} \times \text{številoDelovnihDni} \]
+%
 Če bi predpostavili, da študijski dan traja od sedme ure zjutraj do osmih zvečer in da
 imamo pet delovnih dni, je velikost naše tabele 65 polj. Velikost te tabele torej pove,
 koliko ur na teden obravnavamo. Ker se šolski tedni periodično ponavljajo, je seveda
