--- a/06-uvod-v-latex/urnik/urnik.tex
+++ b/06-uvod-v-latex/urnik/urnik.tex
@@ -2,6 +2,7 @@
 \usepackage[utf8]{inputenc}
 \usepackage[T1]{fontenc}   
 \usepackage[slovenian]{babel}
+\useoackage{amsmath}
 
 \title{Izdelava urnikov}
 \author{Nejc Širovnik}
@@ -240,10 +241,10 @@ takrat, ko algoritem v osnovi ne zadosti strogim omejitvam urnika.
 Ko enkrat ustrezno nastavimo vrednosti uteži, je treba ugotoviti, kako bomo postopali
 v nadaljevanju. Algoritem za izdelavo urnikov je najbolje zasnovati tako, da po vsaki
 spremembi izmeri njegovo kakovost. Tako moramo na vsakem koraku ugotavljati, katere
-omejitve so bile kršene ter kolikokrat se kršitev pojavi. S ?? označimo število
-kršitev omejitve ??, z ?? pa njeno utež. Z naslednjo formulo izračunamo
+omejitve so bile kršene ter kolikokrat se kršitev pojavi. S \(k_n\) označimo število
+kršitev omejitve \(n\), z \(u_n\) pa njeno utež. Z naslednjo formulo izračunamo
 kakovost urnika:
-??
+\[ k_1 \cdot u_1 + k_2 \cdot u_1 + ... + k_n-1 \cdot u_n-1 + k_n \cdot u_n \]
 Nižja vrednost formule pomeni kakovostnejši urnik, izračunamo pa jo na vsakem koraku.
 Korak pri izdelavi urnika predstavlja eno izmed operacij nad njim (označuje njegovo
 spremembo).
@@ -322,22 +323,22 @@ Zgoraj predstavljena shema je le grob opis postopka, ki ga nad urnikom izvaja po
 zato si je smiselno podrobneje ogledati posamezne korake.
 
 \begin{enumerate}
-      \item Z zanko se sprehodimo po vektorju vseh predmetov. Predmet na ??-tem koraku
-      označimo s ??.
+      \item Z zanko se sprehodimo po vektorju vseh predmetov. Predmet na \( i \)-tem koraku
+      označimo s predmet\(_{i}\).
    
       \item Naslednja vgnezdena zanka nas popelje po vseh predavalnicah. Predavalnico na
-      ??-tem koraku označimo s ??.
+      \( j \)-tem koraku označimo s predavalnica\(_{j}\).
    
-      \item Za vse proste termine ?? izračunamo ceno vstavljanja
-      ??, ki ga sestavlja ??, profesor, ki ta predmet predava,
+      \item Za vse proste termine predavalnice\(_{j} \) izračunamo ceno vstavljanja
+      srečanja\(_{i} \), ki ga sestavlja predmet\(_{i} \), profesor, ki ta predmet predava,
       ter skupina, kateri je predmet namenjen.
    
       \item Če je trenutna cena boljša od najboljše dosedanje, potem najboljša dosedanja
       dobi vrednost trenutne. Hkrati si zapomnimo, za kateri termin smo izračunali ceno
-      vstavljanja, da bomo ?? na koncu vstavili v termin z najboljšo
+      vstavljanja, da bomo predmet\( _{i}\) na koncu vstavili v termin z najboljšo
       ceno vstavljanja.
    
-      \item Ko preverimo vse proste termine vseh predavalnic, vstavimo ??
+      \item Ko preverimo vse proste termine vseh predavalnic, vstavimo srečanje\(_{i} \)
       v termin z najboljšo ceno.
    
       \item Sedaj se ponovno vrnemo na začetek in pogledamo najugodnejši termin za naslednji
@@ -453,9 +454,9 @@ sistematičen način odpraviti to težavo.
 Glede na to, da bi naj iskanje s tabuji odpravilo problem vračanja v isti lokalni maksimum,
 prepovedujemo izvajanje sprememb, s katerimi bi se vrnili v že najden lokalni maksimum.
 
-Rešitev se ponuja kar sama - za naslednjih ?? korakov prepovemo vsako spremembo, ki jo
-opravimo v koraku optimizacije. Izbira konstante ?? je odvisna od samega problema, saj
-ne obstaja neki splošen ??, ki bi nas v vsakem primeru pripeljal iz lokalnega ekstrema.
+Rešitev se ponuja kar sama - za naslednjih \(n \) korakov prepovemo vsako spremembo, ki jo
+opravimo v koraku optimizacije. Izbira konstante \(n \) je odvisna od samega problema, saj
+ne obstaja neki splošen \(n \), ki bi nas v vsakem primeru pripeljal iz lokalnega ekstrema.
 Imamo torej seznam prepovedanih sprememb - /tabujev/ in na vsakem koraku za izbrano
 spremembo preverimo, če je element seznama tabujev. Če spremembe ni v seznamu tabujev, jo
 preprosto izvedemo, v primeru, da je, pa postopek vrnemo na iskanje druge spremembe.
@@ -463,15 +464,15 @@ Algoritem iskanja s tabuji se od lokalnega vzpenjanja torej razlikuje le v tem, 
 izbiro spremembe preveri, če je vsebovana v seznamu prepovedanih sprememb. Poglejmo, zakaj
 je takšno postopanje smiselno.
 
-Naj bo ?? ter ?? sprememba urnika, ki nas je pripeljala v lokalni maksimum. To
-spremembo (npr. zamenjava ?? in ??) sedaj shranimo v
-seznam tabujev. V naslednjem koraku izvedemo spremembo ??, ki se prav tako shrani v
+Naj bo \(n = 100 \) ter \(s_1 \) sprememba urnika, ki nas je pripeljala v lokalni maksimum. To
+spremembo (npr. zamenjava srečanja\(_{i} \) in srečanja\(_{j} \)) sedaj shranimo v
+seznam tabujev. V naslednjem koraku izvedemo spremembo \(s_2 \), ki se prav tako shrani v
 seznam prepovedanih sprememb. Podobno naredimo za vse spremembe v nadaljnih korakih. S
-tem poskrbimo, da se lahko v isti lokalni maksimum vrnemo šele čez ?? korakov, saj
-se sprememba ??, ki vodi do lokalnega maksimuma, šele tedaj izbriše iz seznama
+tem poskrbimo, da se lahko v isti lokalni maksimum vrnemo šele čez \(n =100 \) korakov, saj
+se sprememba \(s_1\), ki vodi do lokalnega maksimuma, šele tedaj izbriše iz seznama
 prepovedanih sprememb.
 
-Če smo dosegli lokalni maksimum in vrednost kriterijske funkcije v ?? korakih uspemo
+Če smo dosegli lokalni maksimum in vrednost kriterijske funkcije v \( n\) korakih uspemo
 rešiti iz okolice tega lokalnega maksimuma, potem se je metoda iskanja s tabuji izkazala
 kot uspešna.
 
@@ -499,14 +500,14 @@ točk, oziroma ki ima največjo vrednost kriterijske funkcije.
    
       \item Zanko izvajamo, dokler ne dosežemo enega izmed ustavitvenih pogojev.
    
-      \item Rešitev ??, ki smo jo dobili s pomočjo požrešne metode, izboljšamo z lokalnim vzpenjanjem
+      \item Rešitev \(r \), ki smo jo dobili s pomočjo požrešne metode, izboljšamo z lokalnim vzpenjanjem
       ali iskanjem s tabuji. Kot je že bilo povedano, je iskanje s tabuji nekoliko primernejša metoda,
       saj nas bo lažje pripeljala iz lokalnega maksimuma, do katerega smo prišli s požrešno metodo.
       Vsekakor pa ni nič narobe, če srečo poskusimo tudi z lokalnim vzpenjanjem.
    
-      \item Na vsakem koraku ocenimo izboljšamo rešitev ??. Če je vrednost kriterijske funkcije
+      \item Na vsakem koraku ocenimo izboljšamo rešitev \( r\). Če je vrednost kriterijske funkcije
       za trenutno rešitev prešla zastavljeno zadovoljivo mejo, potem se program zaključi. Prav tako
-      se zaključi, če po ?? korakih še vedno tičimo v istem lokalnem maksimumu.
+      se zaključi, če po \( n\) korakih še vedno tičimo v istem lokalnem maksimumu.
 \end{enumerate}
 %
 % Spodnja vrstica ne začne novega odstavka, zato ne bi smela biti zamaknjena.
