--- a/07-magicni-kvadrati/magic/magic.tex
+++ b/07-magicni-kvadrati/magic/magic.tex
@@ -7,6 +7,8 @@
 \usepackage{url}
 \usepackage{graphicx}
 
+\renewcommand{\proofname}{Dokaz}
+
 % Nastavimo koliko prostora izpustimo pod napisom nad sliko ali tabelo.
 \setlength{\belowcaptionskip}{2mm}
 % Nastavimo odmik prve vrstice v odstavku na 0mm.
@@ -17,6 +19,7 @@
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
 \title{Magični kvadrati}
+\date{}
 % 1. naloga
 % Glavo dokumenta popravite tako, da se ne bo izpisal datum.
 % To naredite tako, da za ukazom `\title` dodate ukaz `\date{}`.
@@ -24,7 +27,10 @@
 \begin{document}
 
 \maketitle
+\begin{center}
 
+   \includegraphic{slika.pdf}
+\end{center}
 % 2. naloga
 % Na tem mestu vključite sliko `slika.pdf`:
 % - naredite okolje `center`, da bo slika postavljena na sredino
@@ -39,14 +45,14 @@ Prirejeno iz virov:
 % V spodnjem okolju `itemize` uporabite ukaz `\url` na obeh spletnih naslovih
 % (naslova sta v komentarju, da ne pride do napake pri prevajanju te datoteke).
 \begin{itemize}
-   \item %http://mathworld.wolfram.com/MagicSquare.html
-   \item %http://en.wikipedia.org/wiki/Magic_square
+   \item \url{http://mathworld.wolfram.com/MagicSquare.html}
+   \item \url{http://en.wikipedia.org/wiki/Magic_square}
 \end{itemize}
 
 % 4. naloga
 % Na tem mestu uporabite ukaz, ki izpiše kazalo vsebine.
 % Poiščite ga na spletu: po angleško se kazalu vsebine reče "table of contents".
-
+\tableofcontents
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 % Konec prvega sklopa nalog
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
@@ -56,14 +62,25 @@ Prirejeno iz virov:
 
 \section{Uvod}
 
-% \begin{definicija}
+\begin{definicija}
    \emph{Magični kvadrat} reda $n$ je nabor $n^2$ različnih števil,
    ki so razvrščena v kvadratno tabelo tako, da vedno dobimo enako vsoto,
    če seštejemo vsa števila poljubne vrstice, vsa števila poljubnega
    stolpca ali vsa števila v katerikoli od glavnih diagonal.
-% \end{definicija}
+\end{definicija}
 
-Primer magičnega kvadrata reda 3 je prikazan v tabeli ?!?.
+Primer magičnega kvadrata reda 3 je prikazan v tabeli \[1\].
+
+begin{table}[htbp]
+   caption{Magični kvadrat reda 3}
+   label{table:mag3}
+   beign{tabular}{|c|c|c|}
+      \hline
+      8 & 1 & 6 \\ \hline
+      3 & 5 & 7 \\ \hline
+      4 & 9 & 2 \\ \hline
+   end{tabular}
+end{table}
 
 % - napis nad tabelo: Magični kvadrat reda 3
 % - oznaka: table:mag3
@@ -73,15 +90,15 @@ Primer magičnega kvadrata reda 3 je prikazan v tabeli ?!?.
 %   4 & 9 & 2 \\\hline
 % Konec magičnega kvadrata
 
-% \begin{definicija}
+\begin{definicija}
    Magični kvadrat reda $n$ je \emph{normalen}, če v njem nastopajo števila
    \begin{equation}
       % oznaka: eq:numbers
       1, 2, 3, \ldots, n^2-1, n^2.
    \end{equation}
-% \end{definicija}
+\end{definicija}
 
-Magični kvadrat v tabeli ?!? je normalen.
+Magični kvadrat v tabeli \[1\] je normalen.
 To je tudi najmanjši netrivialen normalen magični kvadrat.
 Poleg normalnih magičnih kvadratov so zanimivi tudi magični kvadrati praštevil.
 
@@ -108,7 +125,16 @@ reke.
 %   3 & 5 & 7 \\\hline
 %   8 & 1 & 6 \\\hline
 % Konec magičnega kvadrata
-
+begin{table}[htbp]
+   caption{Kvadrat Lo Shu}
+   label{table:loshu}
+   begin{tabular}{|c|c|c|}
+      \hline
+      4 & 9 & 2 \\ \hline
+      3 & 5 & 7 \\ \hline
+      8 & 1 & 6 \\ \hline
+   end{tabular}
+end{table}
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
 \subsection{Kulturna pomembnost}
@@ -122,6 +148,16 @@ izogib boleznim.
 obliki magičnega kvadrata reda 3. Ta je v bistvu enak kot kvadrat
 Lo Shu, vendar je vsako število povečano za 19.
 
+begin{table}[htbp]
+   caption{Kvadrat Kubera-Kolam}
+   label{table:kubera}
+   begin{tabular}{|c|c|c|}
+      \hline
+      23 & 28 & 21 \\ \hline
+      22 & 24 & 26 \\ \hline
+      27 & 20 & 25 \\ \hline
+   end{tabular}
+end{table}
 % - napis nad tabelo: Kvadrat Kubera-Kolam
 % - oznaka: table:kubera
 % Konec magičnega kvadrata
@@ -131,7 +167,7 @@ Lo Shu, vendar je vsako število povečano za 19.
 % Konec magičnega kvadrata
 
 Z magičnimi kvadrati so se ukvarjali tudi najbolj znani matematiki kot na
-primer Euler, glej ???. % ključ: euler
+primer Euler, glej \lbrack3\rbrack. % ključ: euler
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
@@ -142,7 +178,7 @@ v Khajurahu v Indiji in v Enciklopediji Bratovščine Čistosti iz enajstega
 ali dvanajstega stoletja. Vrh vsega gre celo za ">panmagični kvadrat"<.
 V Evropi sta morda najbolj znana naslednja magična kvadrata reda 4:
 
-Magični kvadrat v litografiji Melancholia I (glej sliko ??
+Magični kvadrat v litografiji Melancholia I (glej sliko \[1\]
 za izsek s kvadratom) Albrechta Dürerja naj bi bil najzgodnejši magični kvadrat
 v evropski umetnosti. Zelo podoben je kvadratu Yang Huija, ki je nastal na Kitajskem
 približno 250 let pred Dürerjevim časom. % sklic: fig:durer
@@ -152,7 +188,11 @@ približno 250 let pred Dürerjevim časom. % sklic: fig:durer
 % - oznaka: fig:durer
 % Dodatni parameter v oglatih oglepajih sliko nastavi velikost
 % slike na 150% originalne velikosti.
-\includegraphics[scale=1.3]{durer.png}
+\begin{center}
+   \caption{Dürerjev magični kvadrat}
+   \label{fig:durer}
+   \includegraphics[scale=1.3]{durer.png}
+\end{center}
 
 Vsoto 34 je mogoče najti pri seštevanju števil v vsaki vrstici, vsakem stolpcu,
 na vsaki diagonali, v vsakem od štirih kvadrantov, v sredinskih štirih poljih,
@@ -167,16 +207,30 @@ simetričnih parov ($2+8+9+15$ in $3+5+12+14$), in še na nekaj drugih načinov.
 %    5 & 10 & 11 &  8 \\\hline
 %    9 &  6 &  7 & 12 \\\hline
 %    4 & 15 & 14 &  1 \\\hline
-
+begin{table}[htbp]
+   caption{Dürerjev magični kvadrat $4\times 4$}
+   label{table:durer}
+   begin{tabular}{|c|c|c|c|}
+      \hline
+      16 &  3 &  2 & 13 \\ \hline
+       5 & 10 & 11 &  8 \\ \hline
+       9 &  6 &  7 & 12 \\ \hline
+       4 & 15 & 14 &  1 \\ \hline
+   end{tabular}
+end{table}
+%
 Pasijonska fasada na katedrali Sagrada família v Barceloni
-(glej sliko ?? za fotografijo) vsebuje magični kvadrat reda 4.
+(glej sliko \[2\] za fotografijo) vsebuje magični kvadrat reda 4.
 % sklic: fig:sagrada
 
 % Tu vstavite sliko
 % - napis nad sliko: Pasijonska fasada, Sagrada Família
 % - oznaka: fig:sagrada
-\includegraphics{sagrada.png}
-
+\begin{center}
+   \caption{Pasijonska fasada, Sagrada Família}
+   \label{fig:sagrada}
+   \includegraphics{sagrada.png}
+\end{center}
 Vsota števil v vrsticah, stolpcih oziroma na diagonalah je 33 -- Jezusova starost
 v času pasijona. Strukturno je kvadrat podoben Dürerjevemu, vendar so števila
 v štirih poljih zmanjšana za 1. Posledica je, da sta števili 10 in 14 podvojeni
@@ -188,47 +242,61 @@ in zato kvadrat ni normalen.
 %   11 &  7 &  6 &  9 \\\hline
 %    8 & 10 & 10 &  5 \\\hline
 %   13 &  2 &  3 & 15 \\\hline
-
+\begin{table}
+   caption{Pasijonska fasada, Sagrada Família}
+   label{table:sagrada}
+   begin{tabular}{|c|c|c|c|}
+      \hline
+       1 & 14 & 14 &  4 \\ \hline
+      11 &  7 &  6 &  9 \\ \hline
+       8 & 10 & 10 &  5 \\ \hline
+      13 &  2 &  3 & 15 \\ \hline
+   end{tabular}
+\end{table}
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
 \section{Osnovne lastnosti}
 
-% \begin{definicija}
+\begin{definicija}
       Vsoto ene vrstice, enega stolpca ali ene od glavnih diagonal
       v magičnem kvadratu imenujemo \emph{magična konstanta}.
-% \end{definicija}
+\end{definicija}
 
-% Začetek okolja izrek
-   Magična konstanta normalnega magičnega kvadrata reda !!
-   je enaka
+\begin{izrek}
+   label{izrek:eq:mc}
+   Magična konstanta normalnega magičnega kvadrata reda \[n\] je enaka
    \begin{equation}
       % oznaka: eq:mc
       M_2(n) = \frac{1}{2} n(n^2+1)
    \end{equation}
-% Konec okolja izrek
+\end{izrek}
 
-% Začetek dokaza
+\begin{dokaz}
+   label{dokaz:eq:numbers}
    V normalnem magičnem kvadratu reda $n$ je vsota vseh nastopajočih
-   števil (glej ?? na strani ??) enaka
+   števil (glej (1) na strani (2)) enaka
    $1+2+3+\dots+n^2=\sum_{k=1}^{n^2}k=\frac{1}{2}n^2(n^2+1)$. Ker imamo
    v kvadratu $n$ vrstic z enako vsoto, je vsota števil v eni vrstici
    enaka številu $M_2(n)$. % sklica: eq:numbers, eq:numbers
-% Konec dokaza
+\end{dokaz}
 
-Preprost račun pokaže, da je konstanti ?? analogna konstanta
+Preprost račun pokaže, da je konstanti (2)analogna konstanta
 $M_2(n;A,D)$ za magični kvadrat, v katerem so nameščena števila
-$A$, $A+D$, $A+2D$, \dots, $A+(n^2-1)D$, enaka % sklic: eq:mc
-!!
-Kvadratu v tabeli ?!? ustrezata konstanti $A=20$ in $D=1$.
+$A$, $A+D$, $A+2D$, \dots, $A+(n^2-1)D$, enaka 
+\begin{equation}
+   M_2(n;A,D) = n\left(A+\frac{(n^2-1)}{2}D\right).
+\end{equation}% sklic: eq:mc
 
-% \begin{definicija}
+Kvadratu v tabeli \[3\] ustrezata konstanti $A=20$ in $D=1$.
+
+\begin{definicija}
       Če vsako od števil v normalnem magičnem kvadratu reda $n$ odštejemo
       od števila $n^2+1$, dobimo nov magični kvadrat, ki je prvotnemu
       \emph{komplementaren}.
-% \end{definicija}
+\end{definicija}
 
-Na primer, magičnemu kvadratu Lo Shu (glej tabelo ?!?) priredimo
-komplementarni kvadrat, prikazan v tabeli ?!?.
+Na primer, magičnemu kvadratu Lo Shu (glej tabelo 2) priredimo
+komplementarni kvadrat, prikazan v tabeli 6  .
 %
 % - napis nad tabelo: Kvadratu Lo Shu komplementarni kvadrat
 % - oznaka: ttable:closhu
