--- a/07-magicni-kvadrati/magic/magic.tex
+++ b/07-magicni-kvadrati/magic/magic.tex
@@ -33,7 +33,7 @@
 
 \maketitle
 \begin{figure}
-
+   \centering
    \includegraphics{slika.pdf}
 \end{figure}
 % 2. naloga
@@ -77,6 +77,7 @@ Prirejeno iz virov:
 Primer magičnega kvadrata reda 3 je prikazan v tabeli \[1\].
 
 \begin{table}[htbp]
+   \centering
    \caption{Magični kvadrat reda 3}
    \label{table:mag3}
    \begin{tabular}{|c|c|c|}
@@ -131,6 +132,7 @@ reke.
 %   8 & 1 & 6 \\\hline
 % Konec magičnega kvadrata
 \begin{table}[htbp]
+   \centering
    \caption{Kvadrat Lo Shu}
    \label{table:loshu}
    \begin{tabular}{|c|c|c|}
@@ -154,6 +156,7 @@ obliki magičnega kvadrata reda 3. Ta je v bistvu enak kot kvadrat
 Lo Shu, vendar je vsako število povečano za 19.
 
 \begin{table}[htbp]
+   \centering
    \caption{Kvadrat Kubera-Kolam}
    \label{table:kubera}
    \begin{tabular}{|c|c|c|}
@@ -214,8 +217,9 @@ simetričnih parov ($2+8+9+15$ in $3+5+12+14$), in še na nekaj drugih načinov.
 %    9 &  6 &  7 & 12 \\\hline
 %    4 & 15 & 14 &  1 \\\hline
 \begin{table}[htbp]
-  \caption{Dürerjev magični kvadrat $4\times 4$}
-  \label{table:durer}
+   \centering
+   \caption{Dürerjev magični kvadrat $4\times 4$}
+   \label{table:durer}
    \begin{tabular}{|c|c|c|c|}
       \hline
       16 &  3 &  2 & 13 \\ \hline
@@ -250,8 +254,9 @@ in zato kvadrat ni normalen.
 %    8 & 10 & 10 &  5 \\\hline
 %   13 &  2 &  3 & 15 \\\hline
 \begin{table}
-  \caption{Pasijonska fasada, Sagrada Família}
-  \label{table:sagrada}
+   \centering
+   \caption{Pasijonska fasada, Sagrada Família}
+   \label{table:sagrada}
    \begin{tabular}{|c|c|c|c|}
       \hline
        1 & 14 & 14 &  4 \\ \hline
@@ -270,7 +275,7 @@ in zato kvadrat ni normalen.
 \end{definicija}
 
 \begin{izrek}
-  \label{izrek:eq:mc}
+   \label{izrek:eq:mc}
    Magična konstanta normalnega magičnega kvadrata reda \[n\] je enaka
    \begin{equation}
       % oznaka: eq:mc
