--- a/07-magicni-kvadrati/magic/magic2.tex
+++ b/07-magicni-kvadrati/magic/magic2.tex
@@ -282,7 +282,7 @@ iz kvadrata Lo Shu z zrcaljenjem preko sredinske vodoravne črte.
    \centering
    \caption{Število različnih normalnih magičnih kvadratov}
    \label{table:stevila}
-   \begin{tabular}{|l|c|c|c|c|c|c|}
+   \begin{tabular}{|l|c|c|c|c|c|c|} \hline
       \multicolumn{5}{|c|}{točna vrednost} & približek \\\hline
       red & 1 & 2 & 3 & 4 & 5 & 6 \\\hline
       število kvadratov & 1 & 0 & 1 & 880 & 275305224 & !! \\\hline
