--- a/07-magicni-kvadrati/magic/magic2.tex
+++ b/07-magicni-kvadrati/magic/magic2.tex
@@ -7,7 +7,7 @@
 \usepackage{amsthm}
 \usepackage{url}
 \usepackage{graphicx}
-
+\usepackage{booktabs}
 {\theoremstyle{plain}
 \newtheorem{izrek}{Izrek}[section]
 }
@@ -282,10 +282,10 @@ iz kvadrata Lo Shu z zrcaljenjem preko sredinske vodoravne črte.
    \centering
    \caption{Število različnih normalnih magičnih kvadratov}
    \label{table:stevila}
-   \begin{tabular}{|l|c|c|c|c|c|c|} \hline
-       & \multicolumn{5}{|c|}{točna vrednost} & približek \\\hline
-      red & 1 & 2 & 3 & 4 & 5 & 6 \\\hline
-      število kvadratov & 1 & 0 & 1 & 880 & 275305224 & !! \\\hline
+   \begin{tabular}{lcccccc}\toprule
+       & \multicolumn{5}{c}{točna vrednost} & približek \\\midrule
+      red & 1 & 2 & 3 & 4 & 5 & 6 \\
+      število kvadratov & 1 & 0 & 1 & 880 & 275305224 & !! \\\bottomrule
    \end{tabular}
 \end{table}
 % Konec tabele
