--- a/07-magicni-kvadrati/magic/magic2.tex
+++ b/07-magicni-kvadrati/magic/magic2.tex
@@ -85,6 +85,16 @@ Primer magičnega kvadrata reda 3 je prikazan v tabeli ?!?.
 %   3 & 5 & 7 \\\hline
 %   4 & 9 & 2 \\\hline
 % Konec magičnega kvadrata
+\begin{table}
+   \centering
+   \caption{Magični kvadrat reda 3}
+   \label{table:mag3}
+   \begin{tabular}{|c|c|c|} \hline
+     8 & 1 & 6 \\\hline
+     3 & 5 & 7 \\\hline
+     4 & 9 & 2 \\\hline
+   \end{tabular}
+\end{table}
 
 \begin{definicija}
    Magični kvadrat reda $n$ je \emph{normalen}, če v njem nastopajo števila
@@ -142,6 +152,16 @@ Lo Shu, vendar je vsako število povečano za 19.
 %   22 & 24 & 26 \\\hline
 %   27 & 20 & 25 \\\hline
 % Konec magičnega kvadrata
+\begin{table}
+   \centering
+   \caption{Kvadrat Kubera-Kolam}
+   \label{table:kubera}
+   \begin{tabular}{|c|c|c|} \hline
+     23 & 28 & 21 \\\hline
+     22 & 24 & 26 \\\hline
+     27 & 20 & 25 \\\hline
+   \end{tabular}
+\end{table}
 
 Z magičnimi kvadrati so se ukvarjali tudi najbolj znani matematiki kot na
 primer Euler, glej ~\cite{euler}. % ključ: euler
@@ -186,6 +206,17 @@ simetričnih parov ($2+8+9+15$ in $3+5+12+14$), in še na nekaj drugih načinov.
 %    5 & 10 & 11 &  8 \\\hline
 %    9 &  6 &  7 & 12 \\\hline
 %    4 & 15 & 14 &  1 \\\hline
+\begin{table}
+   \centering
+   \caption{Dürerjev magični kvadrat $4\times 4$}
+   \label{table:durer}
+   \begin{tabular}{|c|c|c|c|} \hline
+     16 &  3 &  2 & 13 \\\hline
+      5 & 10 & 11 &  8 \\\hline
+      9 &  6 &  7 & 12 \\\hline
+      4 & 15 & 14 &  1 \\\hline
+   \end{tabular}
+\end{table}
 
 Pasijonska fasada na katedrali Sagrada família v Barceloni
 (glej sliko ?? za fotografijo) vsebuje magični kvadrat reda 4.
@@ -313,6 +344,18 @@ magični kvadrati redov 5, 6 in 9.
 %    4 &  6 & 13 & 20 & 22 \\\hline
 %   10 & 12 & 19 & 21 &  3 \\\hline
 %   11 & 18 & 25 &  2 &  9 \\\hline
+\begin{table}
+   \centering
+   \caption{Magični kvadrat reda 5}
+   \label{table:mag5}
+   \begin{tabular}{|c|c|c|c|c|} \hline
+     17 & 24 &  1 &  8 & 15 \\\hline
+     23 &  5 &  7 & 14 & 16 \\\hline
+      4 &  6 & 13 & 20 & 22 \\\hline
+     10 & 12 & 19 & 21 &  3 \\\hline
+     11 & 18 & 25 &  2 &  9 \\\hline
+   \end{tabular}
+\end{table}
 
 % - napis nad tabelo: Magični kvadrat reda 6
 % - oznaka: table:mag6
@@ -322,6 +365,19 @@ magični kvadrati redov 5, 6 in 9.
 %   18 & 20 & 22 & 21 & 17 & 13 \\\hline
 %   25 & 29 & 10 &  9 & 26 & 12 \\\hline
 %   36 &  5 & 33 &  4 &  2 & 31 \\\hline
+\begin{table}
+   \centering
+   \caption{Magični kvadrat reda 6}
+   \label{table:mag6}
+   \begin{tabular}{|c|c|c|c|c|c|} \hline
+     6 & 32 &  3 & 34 & 35 &  1 \\\hline
+     7 & 11 & 27 & 28 &  8 & 30 \\\hline
+    19 & 14 & 16 & 15 & 23 & 24 \\\hline
+    18 & 20 & 22 & 21 & 17 & 13 \\\hline
+    25 & 29 & 10 &  9 & 26 & 12 \\\hline
+    36 &  5 & 33 &  4 &  2 & 31 \\\hline
+   \end{tabular}
+\end{table}
 
 % - napis nad tabelo: Magični kvadrat reda 9
 % - oznaka: table:mag9
@@ -334,6 +390,22 @@ magični kvadrati redov 5, 6 in 9.
 %   26 & 28 & 39 & 50 & 61 & 72 & 74 &  4 & 15 \\\hline
 %   36 & 38 & 49 & 60 & 71 & 73 &  3 & 14 & 25 \\\hline
 %   37 & 48 & 59 & 70 & 81 &  2 & 13 & 24 & 35 \\\hline
+\begin{table}
+   \centering
+   \caption{Magični kvadrat reda 9}
+   \label{table:mag9}
+   \begin{tabular}{|c|c|c|c|c|c|c|c|c|} \hline
+     47 & 58 & 69 & 80 &  1 & 12 & 23 & 34 & 45 \\\hline
+     57 & 68 & 79 &  9 & 11 & 22 & 33 & 44 & 46 \\\hline
+     67 & 78 &  8 & 10 & 21 & 32 & 43 & 54 & 56 \\\hline
+     77 &  7 & 18 & 20 & 31 & 42 & 53 & 55 & 66 \\\hline
+      6 & 17 & 19 & 30 & 41 & 52 & 63 & 65 & 76 \\\hline
+     16 & 27 & 29 & 40 & 51 & 62 & 64 & 75 &  5 \\\hline
+     26 & 28 & 39 & 50 & 61 & 72 & 74 &  4 & 15 \\\hline
+     36 & 38 & 49 & 60 & 71 & 73 &  3 & 14 & 25 \\\hline
+     37 & 48 & 59 & 70 & 81 &  2 & 13 & 24 & 35 \\\hline
+   \end{tabular}
+\end{table}
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
