--- a/07-magicni-kvadrati/magic/magic2.tex
+++ b/07-magicni-kvadrati/magic/magic2.tex
@@ -255,7 +255,7 @@ in zato kvadrat ni normalen.
 \end{definicija}
 
 \begin{izrek}
-   Magična konstanta normalnega magičnega kvadrata reda !!
+   Magična konstanta normalnega magičnega kvadrata reda \[n\]
    je enaka
    \begin{equation}
       % oznaka: eq:mc
@@ -274,7 +274,10 @@ in zato kvadrat ni normalen.
 Preprost račun pokaže, da je konstanti ?? analogna konstanta
 $M_2(n;A,D)$ za magični kvadrat, v katerem so nameščena števila
 $A$, $A+D$, $A+2D$, \dots, $A+(n^2-1)D$, enaka % sklic: eq:mc
-!!
+\begin{equation}
+   \label{eq:mcad} % popravi11
+   M_2(n;A,D) = n\frac{1}{2}\bigl(2A+(n^2-1)D\bigr)
+\end{equation}
 Kvadratu v tabeli ?!? ustrezata konstanti $A=20$ in $D=1$.
 
 \begin{definicija}
@@ -316,7 +319,7 @@ iz kvadrata Lo Shu z zrcaljenjem preko sredinske vodoravne črte.
    \begin{tabular}{lcccccc}\toprule
        & \multicolumn{5}{c}{točna vrednost} & približek \\\midrule
       red & 1 & 2 & 3 & 4 & 5 & 6 \\
-      število kvadratov & 1 & 0 & 1 & 880 & 275305224 & !! \\\bottomrule
+      število kvadratov & 1 & 0 & 1 & 880 & 275305224 & \[(1.7745 \pm 0.0016)10^{19}\] \\\bottomrule
    \end{tabular}
 \end{table}
 % Konec tabele
