--- a/07-magicni-kvadrati/magic/magic2.tex
+++ b/07-magicni-kvadrati/magic/magic2.tex
@@ -319,7 +319,7 @@ iz kvadrata Lo Shu z zrcaljenjem preko sredinske vodoravne črte.
    \begin{tabular}{lcccccc}\toprule
        & \multicolumn{5}{c}{točna vrednost} & približek \\\midrule
       red & 1 & 2 & 3 & 4 & 5 & 6 \\
-      število kvadratov & 1 & 0 & 1 & 880 & 275305224 & \[(1.7745 \pm 0.0016)10^{19}\] \\\bottomrule
+      število kvadratov & 1 & 0 & 1 & 880 & 275305224 & \((1.7745 \pm 0.0016)10^{19}\) \\\bottomrule
    \end{tabular}
 \end{table}
 % Konec tabele
