--- a/07-magicni-kvadrati/magic/magic2.tex
+++ b/07-magicni-kvadrati/magic/magic2.tex
@@ -3,7 +3,7 @@
 \usepackage[utf8]{inputenc}
 \usepackage[T1]{fontenc}
 \usepackage{lmodern}
-%\usepackage{amsmath}
+\usepackage{amsmath}
 \usepackage{amsthm}
 \usepackage{url}
 \usepackage{graphicx}
