--- a/07-magicni-kvadrati/magic/magic2.tex
+++ b/07-magicni-kvadrati/magic/magic2.tex
@@ -14,6 +14,7 @@
 {\theoremstyle{definition}
 \newtheorem{definicija}[izrek]{Definicija}
 }
+\newcommand{\m}{\mathcal{M}_2}
 % Nastavimo koliko prostora izpustimo pod napisom nad sliko ali tabelo.
 \setlength{\belowcaptionskip}{2mm}
 % Nastavimo odmik prve vrstice v odstavku na 0mm.
@@ -259,7 +260,7 @@ in zato kvadrat ni normalen.
    je enaka
    \begin{equation}
       \label{eq:mc}
-      M_2(n) = \frac{1}{2} n(n^2+1)
+      \m(n) = \frac{1}{2} n(n^2+1)
    \end{equation}
 \end{izrek}
 
