--- a/08-prosojnice/prosojnice.tex
+++ b/08-prosojnice/prosojnice.tex
@@ -1,10 +1,12 @@
-\documentclass{article}
+\documentclass{beamer}
 % Naloga 1.3.1: Za dokument uporabite razred `beamer'.
 % Ne dodajajte nastavitve za velikost pisave, kot je bila v datoteki `5-prosojnice.tex`.
 
 % Naloga 1.3.2: vključite paket `predavanja'.
-
+\usepackage{predavanja}
 % Naloga 1.3.3: definirajte okolji `definicija' in `izrek'.
+\newtheorem{definicija}{Definicija}
+\newtheorem{izrek}{Izrek}
 % Namig: z iskanjem po datotekah (Ctrl+Shift+F oz. Cmd+Shift+F) 
 % poiščite niz `{definicija}' ali niz `{izrek}'.
 
@@ -12,16 +14,26 @@
 
 % Naloga 1.3.4: pripravite naslovno stran z vsebino:
 % - naslov: Matematični izrazi in uporaba paketa \texttt{beamer}
+\title{Matematični izrazi in uporaba paketa \texttt{beamer}}
 % - podnaslov: \emph{Matematičnih} nalog ni treba reševati!
+\subtitle{\emph{Matematičnih} nalog ni treba reševati!}
 % - inštitut: Fakulteta za matematiko in fiziko
+\institute{Fakulteta za matematiko in fiziko}
 % - datum: naj se ne izpiše; to dosežete z ukazom \date{}.
+\date{}
 % Zgornje podatke nastavite z ukazi kot v dokumentih razreda `article`.
 % Več o tem, kako se naredi naslovno stran, si preberite na naslovu na naslovu:
 % https://www.overleaf.com/learn/latex/Beamer
 % To stran preberite do vključno razdelka "Creating a table of contents".
 % Ukaz `\titlepage` deluje podobno kot ukaz `\maketitle`, ki ste ga že srečali.
-
+\begin{frame}
+    \titlepage
+\end{frame}
 % Naloga 1.3.5: pripravite kazalo vsebine.
+\begin{frame}[pausesections]
+    \frametitle{Kratek pregled}
+    \tableofcontents
+\end{frame}
 % 1. Naslov prosojnice, s kazalom vsebine naj bo "Kratek pregled"
 % 2. S pomožnim parametrom `pausesections' (v oglatih oklepajih) 
 %    določite, da naj se kazalo vsebine odkriva postopoma.
