--- a/08-prosojnice/prosojnice.tex
+++ b/08-prosojnice/prosojnice.tex
@@ -30,7 +30,7 @@
     \titlepage
 \end{frame}
 % Naloga 1.3.5: pripravite kazalo vsebine.
-\begin{frame}[pausesections]
+\begin{frame}
     \frametitle{Kratek pregled}
     \tableofcontents
 \end{frame}
@@ -41,6 +41,7 @@
 % 3. Ker ni videti preveč lepo, pomožni parameter zakomentirajte.
 
 \section{Paket \texttt{beamer}}
+\input{prosojnice/1-paket-beamer.tex}
 
 \section{Paketa \texttt{amsmath} in \texttt{amsfonts}}
 
