--- a/08-prosojnice/prosojnice/1-paket-beamer.tex
+++ b/08-prosojnice/prosojnice/1-paket-beamer.tex
@@ -46,7 +46,7 @@
 	   	% S pomožnim parametrom <+-> lahko določimo, da se bodo 
 		% elementi naštevanja odkrivali postopoma.
 	   \begin{itemize}[<+->]
-		  \item Naj bo $p$ \alert[<4>]{največje} praštevilo.
+		  \item Naj bo $p$ \alert<4>{največje} praštevilo.
 		  \item Naj bo $q$ produkt števil $1$, $2$, \ldots, $p$.
 		  \item Število $q+1$ ni deljivo z nobenim praštevilom, torej je $q+1$ praštevilo.
 		  \item To je protislovje, saj je $q+1>p$. \qedhere
