--- a/08-prosojnice/prosojnice/2-paketa-amsmath-amsfonts.tex
+++ b/08-prosojnice/prosojnice/2-paketa-amsmath-amsfonts.tex
@@ -3,12 +3,12 @@
 	% Oblikujte determinanto matrike. 
 	% Vsebina matrike je že pripravljena v komentarju spodaj.
 	Izračunajte determinanto
-
-		% -1 & 4 & 4 & -2 \\
-		% 1 & 4 & 5 & -1 \\
-		% 1 & 4 & -2 & 2 \\
-		% 3 & 8 & 4 & 3 \\
-
+	\begin{vmatrix}
+		 -1 & 4 & 4 & -2 \\
+		 1 & 4 & 5 & -1 \\
+		 1 & 4 & -2 & 2 \\
+		 3 & 8 & 4 & 3 \\
+	\end{vmatrix}
 	V pomoč naj vam bo Overleaf dokumentacija o matrikah:
 	
 	\href{https://www.overleaf.com/learn/latex/Matrices}{\beamergotobutton{Matrices}}
