--- a/08-prosojnice/prosojnice/2-paketa-amsmath-amsfonts.tex
+++ b/08-prosojnice/prosojnice/2-paketa-amsmath-amsfonts.tex
@@ -24,7 +24,7 @@
 	% ter na dveh mestih ukaz `onslide'.
 	Dokaži \emph{binomsko formulo}: za vsaki realni števili $a$ in $b$ in za vsako naravno število $n$ velja
 	\begin{align*}
-		(a+b)^n = \only<1>{\ldots} \onslide<2,3>{= (a+b) (a+b) \dots (a+b)} \\
+		(a+b)^n \only<1>{= \ldots} \onslide<2,3>{= (a+b) (a+b) \dots (a+b)} \\
 		\onslide<3>{= a^n + n a^{n-1} b + \dots + \binom{n}{k} a^{n-k} b^k + \dots + n a b^{n-1} + b^n} \\
 		= \sum_{k=0}^n \binom{n}{k} a^{n-k} b^k
 	\end{align*}
