--- a/08-prosojnice/prosojnice/2-paketa-amsmath-amsfonts.tex
+++ b/08-prosojnice/prosojnice/2-paketa-amsmath-amsfonts.tex
@@ -36,12 +36,12 @@
 	% Če naredite po en kurzor na začetku vsake vrstice, 
 	% boste lahko oblikovali vse tri vrstice hkrati.
 	Nariši grafe funkcij:
-	\[
-	y = x^2 - 3|x| + 2    y = 3 \sin(\pi+x) - 2 
-	y = \log_2(x-2) + 3   y = 2 \sqrt{x^2+15} + 6 
-	y = 2^{x-3} + 1       y = \cos(x-3) + \sin^2(x+1) 
-	\]
-\end{frame}
+	\begin{align*}
+	&y = x^2 - 3|x| + 2    & y = 3 \sin(\pi+x) - 2 \\
+	&y = \log_2(x-2) + 3   & y = 2 \sqrt{x^2+15} + 6 \\
+	&y = 2^{x-3} + 1       & y = \cos(x-3) + \sin^2(x+1) 
+	\end{align*}
+\end{frame}<
 
 \begin{frame}{Okolje \texttt{multline}}
 	% Naloga 3.2.4:
