--- a/08-prosojnice/prosojnice/2-paketa-amsmath-amsfonts.tex
+++ b/08-prosojnice/prosojnice/2-paketa-amsmath-amsfonts.tex
@@ -41,17 +41,17 @@
 	&y = \log_2(x-2) + 3   & y = 2 \sqrt{x^2+15} + 6 \\
 	&y = 2^{x-3} + 1       & y = \cos(x-3) + \sin^2(x+1) 
 	\end{align*}
-\end{frame}<
+\end{frame}
 
 \begin{frame}{Okolje \texttt{multline}}
 	% Naloga 3.2.4:
-	% Oblikujte spodnje enačbe z ustreznim okoljem,
+	% Oblikujte spo	dnje enačbe z ustreznim okoljem,
 	% da bo enačba oblikovana kot v rešitvah.
 	Poišči vse rešitve enačbe
-	\[
+	\begin{multline}
 	(1+x+x^2) \cdot (1+x+x^2+x^3+\ldots+x^9+x^{10}) = 
 	=(1+x+x^2+x^3+x^4+x^5+x^6)^2.
-	\]
+	\end{multline}
 \end{frame}
 
 \begin{frame}{Okolje \texttt{cases}}
@@ -59,9 +59,9 @@
 	% Oblikujte spodnji funkcijski predpis z ustreznim okoljem,
 	% da oblikovan kot v rešitvah.
 	Dana je funkcija
-	
+	\begin{cases}
 		% \frac{3x^2y-y^3}{x^2+y^2}
-		
+	\end{cases}
 	\begin{itemize}
 		% ukaz displaystyle preklopi v prikazni način v vrstici. 
 	\item Določi $a$, tako da izračunaš limito \( \lim_{(x,y)\to(0,0)} f(x). \)
