--- a/08-prosojnice/prosojnice/2-paketa-amsmath-amsfonts.tex
+++ b/08-prosojnice/prosojnice/2-paketa-amsmath-amsfonts.tex
@@ -59,9 +59,9 @@
 	% Oblikujte spodnji funkcijski predpis z ustreznim okoljem,
 	% da oblikovan kot v rešitvah.
 	Dana je funkcija
-	\begin{cases}
-		% \frac{3x^2y-y^3}{x^2+y^2}
-	\end{cases}
+	$$\begin{cases}
+		\frac{3x^2y-y^3}{x^2+y^2}
+	\end{cases}$$
 	\begin{itemize}
 		% ukaz displaystyle preklopi v prikazni način v vrstici. 
 	\item Določi $a$, tako da izračunaš limito \( \lim_{(x,y)\to(0,0)} f(x). \)
