--- a/08-prosojnice/prosojnice/2-paketa-amsmath-amsfonts.tex
+++ b/08-prosojnice/prosojnice/2-paketa-amsmath-amsfonts.tex
@@ -49,7 +49,7 @@
 	% da bo enačba oblikovana kot v rešitvah.
 	Poišči vse rešitve enačbe
 	\begin{multline*}
-	(1+x+x^2) \cdot (1+x+x^2+x^3+\ldots+x^9+x^{10}) = 
+	(1+x+x^2) \cdot (1+x+x^2+x^3+\ldots+x^9+x^{10}) = \\
 	=(1+x+x^2+x^3+x^4+x^5+x^6)^2.
 	\end{multline*}
 \end{frame}
