--- a/08-prosojnice/prosojnice/4-stolpci-slike.tex
+++ b/08-prosojnice/prosojnice/4-stolpci-slike.tex
@@ -1,23 +1,25 @@
 \begin{frame}{Konstrukcija pravokotnice na premico $p$ skozi točko $T$}
-
-		  \begin{itemize}
-			 \item Dani sta premica $p$ in točka $T$.
-			 \item Nariši lok $k$ s središčem v $T$.
-			 \item Premico $p$ seče v točkah $A$ in $B$.
-			 \item Nariši lok $m$ s središčem v $A$.
-			 \item Nariši lok $n$ s središčem v $B$ in z enakim polmerom.
-			 \item Loka se sečeta v točki $C$.
-			 \item Premica skozi točki $T$ in $C$ je pravokotna na $p$.
-		  \end{itemize}
-
-		  \includegraphics[width=50mm]{fig-1.png}%
-		%   \includegraphics[width=50mm]{fig-2.png}%
-		%   \includegraphics[width=50mm]{fig-3.png}%
-		%   \includegraphics[width=50mm]{fig-4.png}%
-		%   \includegraphics[width=50mm]{fig-5.png}%
-		%   \includegraphics[width=50mm]{fig-6.png}%
-		%   \includegraphics[width=50mm]{fig-7.png}%
-
+	\begin{columns}
+	\column{0.55\textwidth}
+	  \begin{itemize}
+		 \item Dani sta premica $p$ in točka $T$.
+		 \item Nariši lok $k$ s središčem v $T$.
+		 \item Premico $p$ seče v točkah $A$ in $B$.
+		 \item Nariši lok $m$ s središčem v $A$.
+		 \item Nariši lok $n$ s središčem v $B$ in z enakim polmerom.
+		 \item Loka se sečeta v točki $C$.
+		 \item Premica skozi točki $T$ in $C$ je pravokotna na $p$.
+	  \end{itemize}
+	\column{0.45\textwidth}
+	\centering
+		\includegraphics[width=50mm]{slike/fig-1.png}
+		%\includegraphics[width=50mm]{fig-2.png}%
+		%\includegraphics[width=50mm]{fig-3.png}%
+		%\includegraphics[width=50mm]{fig-4.png}%
+		%\includegraphics[width=50mm]{fig-5.png}%
+		%\includegraphics[width=50mm]{fig-6.png}%
+		%\includegraphics[width=50mm]{fig-7.png}%
+	\end{columns}
 \end{frame}
 
 				% Spodnje je za nalogo 3.4.
