--- a/08-prosojnice/prosojnice.tex
+++ b/08-prosojnice/prosojnice.tex
@@ -4,6 +4,9 @@
 
 % Naloga 1.3.2: vključite paket `predavanja'.
 \usepackage{predavanja}
+\usepackage{tikz}
+\usetikzlibrary{math}
+\usepackage{amsmath}
 % Naloga 1.3.3: definirajte okolji `definicija' in `izrek'.
 \newtheorem{definicija}{Definicija}
 \newtheorem{izrek}{Izrek}
