--- a/08-prosojnice/prosojnice/4-stolpci-slike.tex
+++ b/08-prosojnice/prosojnice/4-stolpci-slike.tex
@@ -1,7 +1,7 @@
 \begin{frame}{Konstrukcija pravokotnice na premico $p$ skozi točko $T$}
 	\begin{columns}
 	\column{0.55\textwidth}
-	  \begin{itemize}
+	  \begin{itemize}[<+->]
 		 \item Dani sta premica $p$ in točka $T$.
 		 \item Nariši lok $k$ s središčem v $T$.
 		 \item Premico $p$ seče v točkah $A$ in $B$.
@@ -12,13 +12,13 @@
 	  \end{itemize}
 	\column{0.45\textwidth}
 	\centering
-		\includegraphics[width=50mm]{slike/fig-1.png}
-		%\includegraphics[width=50mm]{fig-2.png}%
-		%\includegraphics[width=50mm]{fig-3.png}%
-		%\includegraphics[width=50mm]{fig-4.png}%
-		%\includegraphics[width=50mm]{fig-5.png}%
-		%\includegraphics[width=50mm]{fig-6.png}%
-		%\includegraphics[width=50mm]{fig-7.png}%
+		<1>\includegraphics[width=50mm]{slike/fig-1.png}
+		<2>\includegraphics[width=50mm]{slike/fig-2.png}
+		<3>\includegraphics[width=50mm]{slike/fig-3.png}
+		<4>\includegraphics[width=50mm]{slike/fig-4.png}
+		<5>\includegraphics[width=50mm]{slike/fig-5.png}
+		<6>\includegraphics[width=50mm]{slike/fig-6.png}
+		<7>\includegraphics[width=50mm]{slike/fig-7.png}
 	\end{columns}
 \end{frame}
 
