--- a/08-prosojnice/prosojnice/4-stolpci-slike.tex
+++ b/08-prosojnice/prosojnice/4-stolpci-slike.tex
@@ -1,6 +1,6 @@
 \begin{frame}{Konstrukcija pravokotnice na premico $p$ skozi točko $T$}
 	\begin{columns}
-	\column{0.55\textwidth}
+	\begin{column}{0.55\textwidth}
 	  \begin{itemize}[<+->]
 		 \item Dani sta premica $p$ in točka $T$.
 		 \item Nariši lok $k$ s središčem v $T$.
@@ -10,7 +10,8 @@
 		 \item Loka se sečeta v točki $C$.
 		 \item Premica skozi točki $T$ in $C$ je pravokotna na $p$.
 	  \end{itemize}
-	\column{0.45\textwidth}
+	\end{column}
+	\begin{column}{0.45\textwidth}
 	\centering
 		\only<1>\includegraphics[width=50mm]{slike/fig-1.png}
 		\only<2>\includegraphics[width=50mm]{slike/fig-2.png}
@@ -19,6 +20,7 @@
 		\only<5>\includegraphics[width=50mm]{slike/fig-5.png}
 		\only<6>\includegraphics[width=50mm]{slike/fig-6.png}
 		\only<7>\includegraphics[width=50mm]{slike/fig-7.png}
+	\end{column}
 	\end{columns}
 \end{frame}
 
