--- a/08-prosojnice/prosojnice/4-stolpci-slike.tex
+++ b/08-prosojnice/prosojnice/4-stolpci-slike.tex
@@ -1,5 +1,5 @@
 \begin{frame}{Konstrukcija pravokotnice na premico $p$ skozi točko $T$}
-	\begin{columns}
+	\begin{columns}[T]
 	\begin{column}{0.55\textwidth}
 	  \begin{itemize}[<+->]
 		 \item Dani sta premica $p$ in točka $T$.
@@ -12,7 +12,7 @@
 	  \end{itemize}
 	\end{column}
 	\begin{column}{0.45\textwidth}
-	\centering
+		\centering
 		\only<1>\includegraphics[width=50mm]{slike/fig-1.png}
 		\only<2>\includegraphics[width=50mm]{slike/fig-2.png}
 		\only<3>\includegraphics[width=50mm]{slike/fig-3.png}
