--- a/08-prosojnice/prosojnice/4-stolpci-slike.tex
+++ b/08-prosojnice/prosojnice/4-stolpci-slike.tex
@@ -13,13 +13,13 @@
 	\end{column}
 	\begin{column}{0.45\textwidth}
 		\centering
-		\only<1>\includegraphics[width=50mm]{slike/fig-1.png}
-		\only<2>\includegraphics[width=50mm]{slike/fig-2.png}
-		\only<3>\includegraphics[width=50mm]{slike/fig-3.png}
-		\only<4>\includegraphics[width=50mm]{slike/fig-4.png}
-		\only<5>\includegraphics[width=50mm]{slike/fig-5.png}
-		\only<6>\includegraphics[width=50mm]{slike/fig-6.png}
-		\only<7>\includegraphics[width=50mm]{slike/fig-7.png}
+		\only<1>{\includegraphics[width=50mm]{slike/fig-1.png}}
+		\only<2>{\includegraphics[width=50mm]{slike/fig-2.png}}
+		\only<3>{\includegraphics[width=50mm]{slike/fig-3.png}}
+		\only<4>{\includegraphics[width=50mm]{slike/fig-4.png}}
+		\only<5>{\includegraphics[width=50mm]{slike/fig-5.png}}
+		\only<6>{\includegraphics[width=50mm]{slike/fig-6.png}}
+		\only<7>{\includegraphics[width=50mm]{slike/fig-7.png}}
 	\end{column}
 	\end{columns}
 \end{frame}
