--- a/08-prosojnice/prosojnice/4-stolpci-slike.tex
+++ b/08-prosojnice/prosojnice/4-stolpci-slike.tex
@@ -55,33 +55,40 @@
 			\fill[blue] (T) circle (2pt);
 			% Premica p
 			\draw[blue, very thick] (-2,0) -- (2,0) node[right] {$p$};
-			\pause
+			\only<+->{%
 			% Definicija pomožne točke A' in risanje krožnega loka k, ki se začne v A'
 			\coordinate (A') at ({-\tt},{\td});
 			\draw[gray, thin] (A') arc[start angle=210, end angle=330, radius=2] node[right] {\scriptsize $k$};
-			\pause
+			}
 			% Točka A
+			\only<+->{%
 			\coordinate [label=below left:{\scriptsize $A$}] (A) at ({-\t},0);
 			\draw (A) circle (1.5pt);
-			\pause
+			}
+			\only<+->{%
 			% Točka B
 			\coordinate [label=below right:{\scriptsize $B$}] (B) at ({\t},0);
 			\draw (B) circle (1.5pt);
-			\pause
+			}
+			\only<+->{%
 			% Definicija točke T', v kateri se začne lok m in risanje loka m z oznako.
 			\coordinate (T') at ({-\tt},{\td});
 			\draw[gray, thin] (T') arc[start angle=330, end angle=150, radius=2] node[left] {\scriptsize $m$};
-			\pause
+			}
+			\only<+->{%
 			% Definicija točke T'' in risanje loka n z oznako.
 			\coordinate (T'') at ({\tt},{\td});
 			\draw[gray, thin] (T'') arc[start angle=210, end angle=30, radius=2] node[right] {\scriptsize $n$};
-			\pause
+			}
+			\only<+->{%
 			% Definicija in risanje točke C
 			\coordinate [label={[blue, above right]:$C$}] (C) at (0,{\t+2*sqrt(3)});
 			\fill[blue] (C) circle (2pt);
-			\pause
+			}
+			\only<+->{%
 			% Risanje premice skozi točki T in C.
 			\draw[blue, very thick] (T) -- (C);
+			}
 		\end{tikzpicture}
 	\end{column}
 	\end{columns}
