--- a/08-prosojnice/prosojnice/4-stolpci-slike.tex
+++ b/08-prosojnice/prosojnice/4-stolpci-slike.tex
@@ -72,7 +72,7 @@
 			}
 			\only<+->{%
 			% Definicija točke T', v kateri se začne lok m in risanje loka m z oznako.
-			\coordinate (T') at ({\tt},{\td});
+			\coordinate (T') at ({\t},{\t});
 			\draw[gray, thin] (T') arc[start angle=150, end angle=330, radius=2] node[left] {\scriptsize $m$};
 			}
 			\only<+->{%
