--- a/08-prosojnice/prosojnice/4-stolpci-slike.tex
+++ b/08-prosojnice/prosojnice/4-stolpci-slike.tex
@@ -70,13 +70,13 @@
 			}
 			\only<+->{%
 			% Definicija točke T', v kateri se začne lok m in risanje loka m z oznako.
-			\coordinate (T') at ({-\td},{\tt});
-			\draw[gray, thin] (T') arc[start angle=150, end angle=330, radius=\r] node[left] {\scriptsize $m$};
+			\coordinate (Tp) at ({-\td},{\tt});
+			\draw[gray, thin] (Tp) arc[start angle=150, end angle=330, radius=\r] node[left] {\scriptsize $m$};
 			}
 			\only<+->{%
 			% Definicija točke T'' in risanje loka n z oznako.
-			\coordinate (T'') at ({\td},{\tt});
-			\draw[gray, thin] (T'') arc[start angle=30, end angle=210, radius=\r] node[right] {\scriptsize $n$};
+			\coordinate (Tpp) at ({\td},{\tt});
+			\draw[gray, thin] (Tpp) arc[start angle=30, end angle=210, radius=\r] node[right] {\scriptsize $n$};
 			}
 			\only<+->{%
 			% Definicija in risanje točke C
